blog card date bugfix on safari + small styling tweak

--- a/src/components/templates/Home/Home.scss
+++ b/src/components/templates/Home/Home.scss
@@ -33,6 +33,12 @@
   @include transition-250ms-ease;
   @include text-3D($red-accent);
 
+  &.Long {
+    @media screen and (max-width: $mobile) {
+      font-size: $medium;
+    }
+  }
+
   @media screen and (max-width: $mobile) {
     font-size: 5rem;
   }
